examples/errors/undefined_variable.pigsh
# 错误：对未声明的变量执行 inc
inc x
